--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -1,18 +1,15 @@
 ---
 title: About Me
-lastUpdatedDate: "2023-06-12"
+lastUpdatedDate: "2024-11-03"
 status: published
 description: This is me.
 ---
 
-Hey, I'm Amy, a frontend engineer, content creator, and digital nomad.
-I create content about frontend engineering and UI Design apps on Twitter, and this blog. I've freelanced as a full-stack developer since my teenage years, and in 2023, I started writing this blog. Let's learn and support each other on this journey!
+Hey, I'm Jeremy. I currently work as an Analytics Consultant, a fancy way of saying Power BI Data Analyst. On this blog you will find articles relating to
+data and Power BI, but this will also be a place where I write book reviews, and write on things that interest me.
 
 ## What's the point of blogging?
 
-- I believe you can learn a lot by following other people's journeys. I'm following a lot of other creators too.
-- Through social media and public building, I get to meet interesting people and we can support each other.
-
-## What kind of stuff do you find here?
-
-Videos, blogs, tips, and discussions. I'm also planning to start a podcast soon.
+- Writing down ideas, reviews, and stories helps consolidate information better in my mind.
+- This blog gives me a spot to publish writings and maybe even help people who stumble upon them.
+- Writing is a critical skill for any individual, especially one in a corporate role. This blog helps me develop that "writing muscle".
