--- a/content/posts/revesta-net.mdx
+++ b/content/posts/revesta-net.mdx
@@ -6,7 +6,7 @@ tags:
   - Software Engineering
   - Technology
 description: "This was the culmination of a few years of software development experience coupled with about a year of learning how to invest."
-status: published
+status: draft
 ---
 
 <YouTubeVideo id="M8t7-2uVgiE" />
