--- a/content/posts/the-bull-case-for-evolution-ab.mdx
+++ b/content/posts/the-bull-case-for-evolution-ab.mdx
@@ -6,7 +6,7 @@ tags:
   - Investing
   - Stock Analysis
 description: "About a year ago I bought a sizeable stake in Evolution AB, a Swedish B2B service provider for online and in person casinos. My investment is currently down 10%, so this is a revisit of the company and the reasons why I invested in the first place."
-status: published
+status: draft
 ---
 
 ![Evolution AB hero image](/evolution_ab.png "Evolution AB hero image")
